--- a/themes/greenwood/source/css/_loader.less
+++ b/themes/greenwood/source/css/_loader.less
@@ -97,9 +97,6 @@
 }
 
 
-.main, .body-wrap {
-  transform-style: preserve-3d;
-}
 .loading {
   opacity: 0;
   visibility: hidden;
@@ -110,9 +107,6 @@
 .body-wrap {
   width: 100%;
   height: 100%;
-  // visibility: hidden;
-  // opacity: 0;
-
 
   &.loaded {
     transition: 1000ms;
